# aethrakairos

./: .gitignore  CONTRIBUTING.md  DESIGN.md  HOSTING.md  README.md  features-cache.json  features.py  fingerprint.py  make_catalog.py  netlify.toml  publish.sh
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: desktop-nightly.yml  desktop.yml  enrich.yml  stamp.yml  stems.yml  test.yml
desktop/: .gitignore  NOTARIZATION.md  README.md  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json  tauri.dev.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
dna/137/: 01-137.mp3.fp
dna/2-hydrogen-means-helium-is-a-mirror/: 01-2-hydrogen-means-helium-is-a-mirror.mp3.fp
dna/3-14159/: 01-3-14159.mp3.fp
dna/addiction/: 01-addiction.mp3.fp
dna/adventure/: 01-adventure.mp3.fp
dna/audio-2706/: 01-audio-2706.mp3.fp
dna/audio-4927/: 01-audio-4927.mp3.fp
dna/ault-park-party/: 01-ault-park-party.mp3.fp
dna/ault-park-wedding-2/: 01-ault-park-wedding-2.mp3.fp
dna/beautiful-2/: 01-beautiful-2.mp3.fp
docs/: CNAME  LICENSE-AUDIO  LICENSE-CODE  catalog.json  index.html  mac.html  manifest.webmanifest  news.json  robots.txt  sw.js
masters/: .gitkeep
tests/: player.test.mjs  test_pipeline.py
tools/: acceptance.mjs  echoes_power_smoke.mjs  enrich_structure.py  integration.mjs  make_art.mjs  make_icons.mjs  make_mix_fixture.py  make_synthetic_deploy.py  mix_acceptance.mjs  stamp_version.py  stems.py  update_acceptance.mjs
(+253 files in other folders)
